# DataIntegrationEngine

./: .flake8  .gitignore  CHANGELOG.md  README.md  SPEC.md  UNIT_CONVERSIONS.md  app.yaml  auto_worker_requirements.txt  dagster_cloud.yaml  mypy.ini  pyproject.toml  pytest.ini  release.sh  requirements.txt  setup.py
.github/workflows/: branch_deployments.yml  cicd.yml  dagster-cloud-branch-deployments.yml  dagster-cloud-deploy.yml  deploy.yml  format_code.yml  orchestration-ci.yml  publish-to-pypi.yml
backend/: __init__.py  bounding_polygons.py  config.py  constants.py  converter.py  exceptions.py  geo_utils.py  hydrograph.py  logger.py  logging.py  persister.py  quality.py  record.py  source.py  transformer.py  trend_stats.py  unifier.py  well_correlation.py  worker.py
backend/connectors/: README.md  __init__.py  _dlt.py  _sensorthings.py  constants.py  mappings.py  st_connector.py
backend/connectors/ampapi/: source.py  transformer.py
backend/connectors/bor/: source.py  transformer.py
backend/connectors/ckan/: __init__.py  source.py  transformer.py
backend/connectors/isc_seven_rivers/: source.py  transformer.py
backend/connectors/nmbgmr/: source.py  transformer.py
backend/connectors/nmenv/: source.py  transformer.py
backend/connectors/nmose/: source.py  transformer.py
backend/connectors/ocotillo/: mappings.py  source.py  transformer.py
backend/connectors/st2/: source.py  transformer.py
backend/connectors/usgs/: source.py  transformer.py
backend/connectors/wqp/: source.py  transformer.py
backend/persisters/: factory.py  geodataframe.py  geoserver.py  geoserver_db_models.py  ogc_features.py  strategies.py
dagsterio/: __init__.py  assets.py  nmbgmr.py
dagsterio/config/: example_config.yaml  source_constants.py
docs/: cleanup-todo.md  cli-removal-plan.md  framework-migration-plan.md  orchestrated-vs-cli.md
frontend/: cli.py  cronjob_worker.sh  unifier.py
frontend/api/: app.py
orchestration/: AGENTS.md  Dockerfile  README.md  cloudbuild.yaml  cloudrun.yaml  definitions.py  deploy_serverless.sh  logging_bridge.py  pyproject.toml
orchestration/assets/: analytes.py  products.py  waterlevels.py  wells.py
orchestration/config/: mcl.json  mcl.sample.json  products.yaml
orchestration/pygeoapi/: Dockerfile  cloudbuild.yaml  config.yml.j2  generate_config.py
orchestration/resources/: die_config.py  gcs.py  geodataframe_io.py  geoserver.py
tests/: __init__.py  test_bor_metadata.py  test_cli.py  test_config_validation.py  test_converter.py  test_nmbgmr_metadata.py  test_quality.py  test_record_classes.py  test_source_mapping.py  test_source_registry.py  test_transformer.py  test_trend_stats.py  test_unifier.py  test_unify_dual.py  test_usgs_metadata.py  test_well_correlation.py  test_wqp_metadata.py  test_wqp_multi_analyte.py
tests/archived/: test_cli.py  test_unifier.py
tests/source_tests/: test_bernco.py  test_bor.py  test_cabq.py  test_ebid.py  test_nmbgmr.py  test_nmed_dwb.py  test_nmose_isc_seven_rivers.py  test_nmose_roswell.py  test_nwis.py  test_pvacd.py  test_wqp.py
tests/test_cli/: __init__.py  test_bernco.py  test_cabq.py  test_ebid.py  test_nmbgmr.py  test_nmbgmr_amp.py  test_nmed_dwb.py  test_nmose_isc_seven_rivers.py  test_nmose_roswell.py  test_nwis.py  test_pvacd.py  test_wqp.py
tests/test_persisters/: test_geodataframe.py  test_ogc_features.py
tests/test_sources/: __init__.py  test_bernco.py  test_bor.py  test_cabq.py  test_ebid.py  test_nmbgmr.py  test_nmbgmr_amp.py  test_nmed_dwb.py  test_nmose_isc_seven_rivers.py  test_nmose_roswell.py  test_nwis.py  test_ocotillo.py  test_pvacd.py  test_wqp.py
